--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="welcome_title">Bienvenue sur MediAssist</string>
-    <string name="welcome_subtitle">Gérez vos médicaments et rendez-vous en toute simplicité</string>
-    <string name="get_started">commencer</string>
-    <string name="splash_quote">\"Votre santé est votre richesse. Prenez-en soin avec MediAssist.\"</string>
+    <string name="welcome_title">Welcome to MediAssist</string>
+    <string name="welcome_subtitle">Your Medical Assistant At Your Hands</string>
+    <string name="get_started">Get Started</string>
+    <string name="splash_quote">\"Healing is a matter of time, but it is sometimes also a matter of opportunity.\"</string>
 </resources>
